--- a/vercel.json
+++ b/vercel.json
@@ -8,16 +8,12 @@
   ],
   "routes": [
     {
+      "src": "/bfhl",
+      "dest": "/index.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "functions": {
-    "index.js": {
-      "maxDuration": 30
-    }
-  }
+  ]
 }
